@startuml
class Main {
~ void main()
}

class Enemy {
}
class Entity {
- String name
- int health
- int maxHealth
- double gold
- boolean isAlive
- int level
- int xp
- String type
- char classType
- Inventory inventory
- Scanner input
+ String getName()
+ String getType()
+ void setMaxHealth(int)
+ Inventory getInventory()
+ boolean getIsAlive()
+ int[] getHealth()
+ int setHealth(int)
+ double getGold()
+ void setGold(double)
+ int takeDamage(int,boolean)
+ void heal(int)
+ void setXP(int)
+ void levelUp()
+ void printCharacterSheet()
}


class Item {
- String name
- String itemType
- int damage
- int healing
- int durability
- int defence
- double value
+ Item makeWeapon(String,int,int,int,double)
+ Item makeArmor(String,int,int,boolean,double)
+ Item makePotion(String,int,int,double)
+ void printItemStats()
+ String getName()
+ int getDamage()
+ int getHealing()
+ String getItemType()
+ int getDefence()
}


class ChoiceMaker {
- ArrayList<String> choices
- Scanner input
+ int choiceResult()
}


class Hero {
+ void makeWarrior()
+ void makeRogue()
+ void makeMage()
}

class Battle {
- Hero hero
- Enemy enemy
- Scanner input
+ boolean fight()
}


class Inventory {
- HashMap<String,ArrayList<Item>> inventory
~ Scanner input
+ void makeWarriorInv()
+ void makeRogueInv()
+ void makeMageInv()
+ void printInventory()
+ Item getMainHand()
+ Item getOffHand()
+ ArrayList<Item> getPotions()
+ Item getPotion(int)
+ void setInventory(Item,String)
+ void equipItem()
+ void addPotions(ArrayList<Item>)
+ void addOther(ArrayList<Item>)
+ ArrayList<Item> getInventoryArray()
}




Entity <|-- Enemy
Entity <|-- Hero
Entity <-- Inventory
Inventory <-- Item
Battle <-- Entity
@enduml